--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p id="roi-percentage"></p>
         </div>
     </div>
-    
+    <center>Visit our main website at <a href="https://defencelabs.ca">defencelabs.ca</a></center>
     <script src="script.js"></script>
 </body>
 </html>
